-- fixed jetty scannpath issue

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.encoding.outputEncoding>UTF-8</project.encoding.outputEncoding>
 		<org.jodd.version>3.6.6</org.jodd.version>
-		<jdk.version>1.8</jdk.version>
+		<jdk.version>1.7</jdk.version>
 		<pi4j.version>1.0</pi4j.version>	
 	</properties>
   
@@ -49,6 +49,12 @@
 		<groupId>com.pi4j</groupId>
 		<artifactId>pi4j-core</artifactId>
 		<version>${pi4j.version}</version>
+		<exclusions> 
+			<exclusion> 
+				<groupId>com.pi4j</groupId> 
+				<artifactId>pi4j-native</artifactId> 
+			</exclusion> 
+		</exclusions> 		 
 	</dependency>
     
     <dependency>
@@ -100,7 +106,12 @@
 		<version>1.7.7</version>
 	</dependency>
     
-    
+    <dependency>
+		<groupId>org.jodd</groupId>
+		<artifactId>jodd-joy</artifactId>
+		<version>${org.jodd.version}</version>
+	</dependency>
+        
     <dependency>
       <groupId>org.jodd</groupId>
       <artifactId>jodd-core</artifactId>
