--- a/src/main/resources/app-db.properties
+++ b/src/main/resources/app-db.properties
@@ -1,9 +1,9 @@
  # database
 jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/smart_home
-jdbc.url=jdbc:mysql://192.168.157.101:3306/smart_home
-jdbc.username=smartHome
-jdbc.password=smartHome
+jdbc.url=jdbc:mysql://192.168.158.100:3306/smart_home
+jdbc.username=smarthome
+jdbc.password=smarthome
 
 # db pool
 dbpool.driver=${jdbc.driverClassName}
